public/style.css
/* ... */
.button-channel_wrapper:hover {
  transform: scale(1.05);
}

/*
.button-channel_wrapper:focus {
  outline-color: var(--blue-3\<deleted\|variable-b86cbe11\>);
  outline-offset: 2px;
  outline-width: .2rem;
  outline-style: solid;
}
*/

.section-about {
  margin-top: 50px;
}

.about_content-wrapper {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  grid-template-rows: auto;
  align-items: center;
  margin-bottom: 2rem;
}

.episode-item {
  flex-direction: column;
  display: flex;
  row-gap: 20px;
}

.subscribe_component.background-color-blue2 {
  background-image: url("https://assets-global.website-files.com/6613d9d7c23cff2286422b25/6613d9d7c23cff2286422b89_Group%202.svg");
  background-position: 50% 100%;
  background-repeat: no-repeat;
  background-size: cover;
  border-top-left-radius: 4rem;
  border-bottom-right-radius: 4rem;
}

.subscribe_content-wrapper {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  align-items: center;
  display: grid;
}

.subscribe_form {
  background-color: var(--white);
  border-radius: 2rem;
  align-items: center;
  display: flex;
}

.subscribe_form:focus {
  outline-color: var(--blue-3\<deleted\|variable-b86cbe11\>);
  outline-offset: 0px;
  outline-width: 3px;
  outline-style: solid;
}

.form_text-field {
  background-color: rgba(0, 0, 0, 0);
  border: 1px #000;
  margin-bottom: 0;
  padding: .5rem 1.5rem;
}

.form_text-field:focus {
  outline-color: var(--blue-3\<deleted\|variable-b86cbe11\>);
  outline-offset: 2px;
  outline-width: .2rem;
  outline-style: solid;
}

.bottom_row {
  grid-column-gap: 1.25rem;
  grid-row-gap: 1.25rem;
  grid-template-rows: auto;
  grid-template-columns: auto;
  grid-auto-columns: auto;
  grid-auto-flow: column;
  justify-content: start;
  display: grid;
}

.bottom_row.is-for-social-icons {
  grid-column-gap: .75rem;
  grid-row-gap: .75rem;
  text-align: right;
  grid-auto-flow: column;
  justify-items: end;
}

.section-contact-form.background-color-gradient-blue1 {
  text-align: center;
  text-align: center;
  background-image: none;
  margin-bottom: 40px;
}

.footer_component.background-color-gradient1 {
  background-image: linear-gradient(150deg, var(--sapphire) 13%, var(--dark-purple) 100%, #9e4a75);
}

.footer_content {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
}

.footer-list_wrapper {
  width: 340px;
}

/*.link_social-media:focus {
  outline-color: var(--blue-3\<deleted\|variable-b86cbe11\>);
  outline-offset: 2px;
  outline-width: .2rem;
  outline-style: solid;
} */

.blog-image {
  object-fit: cover; /* Change object-fit to 'cover' */
  border-radius: 10px;
  position: absolute; /* Add this line */
  top: 0; /* Add this line */
  left: 0; /* Add this line */
  width: 100%; /* Add this line */
  height: 120%; /* Add this line */
}

.profile-picture {
  border-radius: 100px;
  align-self: center;
  max-width: 45px;
  margin-right: 10px;
}

.paragraph-detials-medium {
  margin-bottom: 24px;
  font-size: 15px;
  line-height: 24px;
}

.podcast-banner {
  background-color: #fff;
  border-radius: 15px;
  margin-bottom: 40px;
  padding: 20px;
  box-shadow: 0 12px 14px rgba(0, 0, 0, .06);
  animation: pulse 1s ease 3s 2 normal forwards;
}

@keyframes pulse {
  0% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.1);
  }

  100% {
    transform: scale(1);
  }
}

.featured-item {
  color: #202146;
  cursor: pointer;
  align-items: center;
  margin-bottom: 20px;
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
  display: flex;
}

.featured-item:hover {
  transform: translate(10px);
}

.blog-grid {
  grid-column-gap: 40px;
  grid-template-rows: auto;
  grid-template-columns: 1fr .4fr;
}

.featured-block {
  margin-top: 10px;
}

.search-button-wrapper {
  height: 100%;
  position: absolute;
  top: 0%;
  bottom: auto;
  left: auto;
  right: 0%;
}

.title-medium {
  color: var(--lightblue);
  margin-bottom: 0;
  font-size: 17px;
  font-weight: 700;
  line-height: 130%;
  text-decoration: none;
}

.heading-h2 {
  margin-top: 0;
  font-size: 1.9rem;
}

.heading-5 {
  margin-top: 0;
  padding-top: 0;
}

.heading-h2.blog-title {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  margin-bottom: 2rem;
  font-size: 2.5rem;
}

.heading-h2.nieuws-cat {
  margin-bottom: 0;
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.2;
}

.heading-h2.review-title {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  margin-bottom: 0;
  font-size: 2.5rem;
}

.heading-h2.review-topic {
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.2;
}

.heading-h2.nieuws-list {
  margin-bottom: 1rem;
}

.blog-content {
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  display: flex;
  height: 100%;
  grid-area: span 1 / span 2 / span 1 / span 2;
}

.blog-item {
  grid-column-gap: 40px;
  grid-row-gap: 16px;
  cursor: pointer;
  background-color: #fff;
  border-radius: 15px;
  grid-template-rows: auto;
  grid-template-columns: 1fr .8fr 1fr;
  grid-auto-columns: 1fr;
  align-items: center;
  justify-items: start;
  margin-bottom: 0;
  padding: 30px 20px;
  text-decoration: none;
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
  display: grid;
  box-shadow: 0 22px 34px rgba(0, 0, 0, .06);
  width: 100%;
}


.blog-item:hover {
  transform: scale(1.02);
}

.stick-wrapper {
  position: -webkit-sticky;
  position: sticky;
  top: 85px;
}

.categories-pill {
  cursor: pointer;
  background-color: #fff;
  border-radius: 100px;
  margin-bottom: 0;
  margin-right: 20px;
  padding: 6px 16px;
  text-decoration: none;
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
}

.categories-pill.w--current {
  transform: scale(1.25);
}

.categories-pill:hover {
  transform: scale(1.05);
}

.content {
  padding: 45px 3% 50px;
  animation: slide-in-bottom 1s ease 0ms 1 normal forwards;
}
/* ... */

